--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
 <script>
   var redirect = location.href
   console.log(redirect)
-  window.location = redirect.replace('https', 'http') + '?noReturn=true'
+  window.location = redirect.replace('https', 'http')
 </script>
