--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Redirecting</title>
-<meta http-equiv="refresh" content="0; URL=https://muensterer.link/">
 <script>
   var redirect = location.href
   console.log(redirect)
-  window.location = redirect.replace('https', 'http') + '?noReturn=true'
+  window.location.assign('https://dnnsmnstrr.vercel.app/api/' + window.location.pathname + '?noReturn=true'
 </script>
