Fix redirect api path

--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@
 <script>
   var redirect = location.href
   console.log(redirect)
-  window.location.assign('https://dnnsmnstrr.vercel.app/api/' + window.location.pathname + '?noReturn=true')
+  window.location.assign('https://dnnsmnstrr.vercel.app/api/redirect' + window.location.pathname + '?noReturn=true')
 </script>
