--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 <script>
   var redirect = location.href
   console.log(redirect)
+  console.log(window.location.pathname)
   window.location.assign('https://dnnsmnstrr.vercel.app/api/redirect' + window.location.pathname + '?noReturn=true')
 </script>
