--- a/index.html
+++ b/index.html
@@ -4,5 +4,9 @@
 <meta http-equiv="refresh" content="0; URL=https://muensterer.link/">
 <script>
   var redirect = location.href
-  window.location = redirect.replace('https', 'http') + '?noReturn=true'
+  if (!redirect.includes('noReturn')) {
+    window.location = redirect.replace('https', 'http') + '?noReturn=true'
+  } else {
+    window.location.assign('https://dnnsmnstrr.github.io')
+  }
 </script>
